--- a/notebooks/get_started_nvidia_api.ipynb
+++ b/notebooks/get_started_nvidia_api.ipynb
@@ -107,13 +107,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "fdd06b03-eefd-47ba-af66-19f669765c39",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Set the endpoint urls of the NIMs\n",
-    "os.environ[\"APP_LLM_MODELNAME\"] = \"nvidia/llama-3.3-nemotron-super-49b-v1\"\n",
+    "os.environ[\"APP_LLM_MODELNAME\"] = \"nvidia/llama-3_3-nemotron-super-49b-v1_5\"\n",
     "os.environ[\"APP_EMBEDDINGS_MODELNAME\"] = \"nvidia/llama-3.2-nv-embedqa-1b-v2\"\n",
     "os.environ[\"APP_RANKING_MODELNAME\"] = \"nvidia/llama-3.2-nv-rerankqa-1b-v2\"\n",
     "os.environ[\"APP_EMBEDDINGS_SERVERURL\"] = \"\"\n",
