Changed custom evaluator portion of notebook to be more documenation type rather than execution code. Got rid of unused portions in utils.py

--- a/notebooks/aira_evaluation_tutorial.ipynb
+++ b/notebooks/aira_evaluation_tutorial.ipynb
@@ -182,6 +182,7 @@
         "# Option A (recommended): edit eval_config.yml once to set an absolute dataset path.\n",
         "# Set: eval.general.dataset.file_path: /abs/path/to/eval_dataset.json\n",
         "# If this path is wrong/missing, the evaluation will fail.\n",
+        "# To run eval: !nat eval --config_file \"{config_path}\"\n",
         "\n",
         "# Option B (recommended): override dataset per run via CLI flag.\n",
         "# nat eval will use this dataset path instead of the config value.\n",
@@ -228,18 +229,22 @@
         "\n",
         "# Absolute path to the other config file\n",
         "eval_config_path = (project_root / \"configs\" / \"eval_config.yml\").resolve()\n",
+        "dataset_path = (project_root / \"data\" / \"eval_dataset.json\").resolve()\n",
         "\n",
         "# Fail early if missing\n",
         "assert eval_config_path.is_file(), f\"Config file not found at: {eval_config_path}\"\n",
+        "assert dataset_path.exists(), f\"Dataset path does not exist: {dataset_path}\"\n",
         "\n",
-        "# Option A: Run nat with our evaluation harness if you set the dataset path in the config file\n",
-        "!nat eval --config_file \"{eval_config_path}\"\n",
         "\n",
-        "# Option B: Run nat with our evaluation harness if you want to set the dataset path in the command line (uncomment this line and comment the line above)\n",
-        "# !nat eval --config_file \"{eval_config_path}\" --dataset \"{dataset_path}\"\n",
+        "# Option A: Run nat with our evaluation harness with our default config file and dataset path\n",
+        "!nat eval --config_file \"{eval_config_path}\" --dataset \"{dataset_path}\"\n",
         "\n",
-        "# There are a lot of logs, so it might be worth redirecting to a file so we can see the output easier just use this command\n",
-        "# !nat eval --config_file \"{eval_config_path}\" > output.txt 2>&1 "
+        "# Option B: You can also set the specific dataset you want to use in the config file itself by simply changing the dataset path in the config file\n",
+        "# !nat eval --config_file \"{eval_config_path}\"\n",
+        "\n",
+        "\n",
+        "# There are a lot of logs, so it might be worth redirecting to a file so we can see the output easier just use this command to save logs\n",
+        "# !nat eval --config_file \"{eval_config_path}\" --dataset \"{dataset_path}\" > output.txt 2>&1 "
       ]
     },
     {
@@ -256,7 +261,7 @@
       "metadata": {},
       "source": [
         "# Optional: Let's get an CUSTOM EVALUATOR set up together!\n",
-        "By running the cells below, the steps to create a custom evaluator are as follows:\n",
+        "The steps to create a custom evaluator are as follows:\n",
         "1. Create the file with the evaluators code (we'll be making a pretty basic similarity checker)\n",
         "2. Add it into the evaluator_register.py file\n",
         "3. Then reinstall the package to register it\n",
@@ -267,15 +272,16 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
       "source": [
-        "%%writefile ../aira/src/aiq_aira/eval/evaluators/similarity_evaluator.py\n",
-        "# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.\n",
-        "# SPDX-License-Identifier: Apache-2.0\n",
+        "# Let's create a similarity evaluator\n",
         "\n",
+        "## Create the evaluator file under (/aira/src/aiq_aira/eval/evaluators/similarity_evaluator.py)\n",
+        "\n",
+        "### The code you could copy and paste would look like this \n",
+        "\n",
+        "```python\n",
         "\"\"\"\n",
         "Custom Similarity Evaluator - Demo evaluator for tutorial purposes.\n",
         "Computes cosine similarity between generated report and ground truth.\n",
@@ -380,41 +386,39 @@
         "        \n",
         "        logger.info(f\"Similarity evaluator completed: {len(scores)} valid scores, average: {avg_score:.3f}\")\n",
         "        \n",
-        "        return EvalOutput(average_score=avg_score, eval_output_items=eval_output_items)\n"
+        "        return EvalOutput(average_score=avg_score, eval_output_items=eval_output_items)\n",
+        "        ```\n"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
       "source": [
-        "from pathlib import Path\n",
-        "reg_path = Path(\"../aira/src/aiq_aira/eval/evaluator_register.py\")\n",
-        "reg_path.parent.mkdir(parents=True, exist_ok=True)\n",
+        "# Manual Setup Instructions - Verifying File / Imports\n",
         "\n",
-        "base_imports = (\n",
-        "    \"from aiq.builder.builder import EvalBuilder\\n\"\n",
-        "    \"from aiq.builder.evaluator import EvaluatorInfo\\n\"\n",
-        "    \"from aiq.cli.register_workflow import register_evaluator\\n\"\n",
-        ")\n",
+        "## Step 1: Ensure the evaluator registration file exists \n",
         "\n",
-        "text = reg_path.read_text(encoding=\"utf-8\") if reg_path.exists() else \"\"\n",
-        "if \"register_evaluator\" not in text or \"EvaluatorInfo\" not in text:\n",
-        "    reg_path.write_text(base_imports + \"\\n\", encoding=\"utf-8\")\n",
-        "    print(\"Wrote base imports to:\", reg_path.resolve())\n",
-        "else:\n",
-        "    print(\"Imports already present:\", reg_path.resolve())\n"
+        "Navigate to aira/src/aiq_aira/eval/evaluator_register.py to check if file exists\n",
+        "\n",
+        "## Step 2: Add required imports at the top of the file (should already exist if using eval harness)\n",
+        "```python\n",
+        "from aiq.builder.builder import EvalBuilder\n",
+        "from aiq.builder.evaluator import EvaluatorInfo\n",
+        "from aiq.cli.register_workflow import register_evaluator\n",
+        "```"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
       "source": [
-        "%%writefile -a ../aira/src/aiq_aira/eval/evaluator_register.py\n",
-        "# Custom similarity evaluator registration\n",
+        "# Registering the new evaluator\n",
+        "\n",
+        "- Head to ../aira/src/aiq_aira/eval/evaluator_register.py (this is where you would specify the evaluator to be registered by nat)\n",
+        "\n",
+        "### Copy and Paste this portion of code into the evaluator_register.py\n",
+        "```python\n",
+        "\n",
         "from aiq_aira.eval.evaluators.similarity_evaluator import SimilarityEvaluator, SimilarityEvaluatorConfig\n",
         "\n",
         "@register_evaluator(config_type=SimilarityEvaluatorConfig)\n",
@@ -428,84 +432,61 @@
         "        config=config,\n",
         "        evaluate_fn=evaluator.evaluate,\n",
         "        description=\"Cosine Similarity Evaluator\",\n",
-        "    )\n"
+        "    )\n",
+        "```\n",
+        "\n",
+        "\n"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
       "source": [
-        "import subprocess, sys\n",
+        "# Reinstalling the package so our custom evaluator gets registered\n",
         "\n",
-        "# 1) Fix tokenizers/transformers compatibility before loading sentence_transformers\n",
-        "print(\"Ensuring transformers/tokenizers compatibility (tokenizers>=0.21,<0.22 + transformers latest)...\")\n",
-        "fix_cmds = [\n",
-        "    [sys.executable, \"-m\", \"pip\", \"install\", \"-U\", \"tokenizers>=0.21,<0.22\"],\n",
-        "    [sys.executable, \"-m\", \"pip\", \"install\", \"-U\", \"transformers\"],\n",
-        "]\n",
-        "for cmd in fix_cmds:\n",
-        "    res = subprocess.run(cmd, capture_output=True, text=True)\n",
-        "    if res.returncode != 0:\n",
-        "        print(\"Dependency fix step failed:\")\n",
-        "        print(res.stderr or res.stdout)\n",
-        "        # Do not exit here; continue to reinstall so the error is visible if it persists.\n",
+        "## Step 1: Fix tokenizers/transformers compatibility\n",
+        "You might run into compatibility issues with some dependencies. \n",
+        "For the tutorial just pip install these specific package versions\n",
+        "```python\n",
+        "- pip install -U \"tokenizers>=0.21,<0.22\"\n",
+        "- pip install -U transformers\n",
+        "```\n",
+        "## Step 2: Reinstall the AIRA package \n",
+        "Run this command to cleanly reinstall the package \n",
+        "```python\n",
+        "- pip install -e \".[dev]\" --force-reinstall --no-deps --no-cache-dir\n",
+        "```\n",
+        "## Step 3: Verifying the Evaluator\n",
+        "You can use a built-in NAT command to check all the registered evaluators\n",
         "\n",
-        "# 2) Reinstall the package\n",
-        "print(\"Reinstalling package with our new similarity evaluator (clean, no deps, no cache)...\")\n",
-        "cmd = [\n",
-        "    sys.executable, \"-m\", \"pip\", \"install\",\n",
-        "    \"-e\", \"..[dev]\",\n",
-        "    \"--force-reinstall\",\n",
-        "    \"--no-deps\",\n",
-        "    \"--no-cache-dir\",\n",
-        "    \"--quiet\",\n",
-        "]\n",
-        "result = subprocess.run(cmd, capture_output=True, text=True)\n",
-        "\n",
-        "if result.returncode == 0:\n",
-        "    print(\"Package reinstalled successfully!\")\n",
-        "    print(\"Your new similarity evaluator should now work correctly\")\n",
-        "else:\n",
-        "    print(\"Reinstall failed:\")\n",
-        "    print(result.stderr or result.stdout)\n",
-        "\n",
-        "print(\"Note: If imports were already attempted in this kernel, a kernel restart may be required so transformers/tokenizers are re-imported cleanly.\")\n"
+        "Simply run \n",
+        "```python\n",
+        "- nat info components -t evaluator\n",
+        "```"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
       "source": [
-        "#Run this to see the evaluators available, if you created the custom evaluator with the cells above, you should see the similarity_evaluator here!\n",
-        "!nat info components -t evaluator"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from pathlib import Path\n",
-        "cfg_path = Path(\"../configs/eval_config_with_similarity.yml\")\n",
-        "cfg_path.parent.mkdir(parents=True, exist_ok=True)\n",
-        "print(\"Will write to:\", cfg_path.resolve())"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "%%writefile ../configs/eval_config_with_similarity.yml\n",
-        "# SPDX-FileCopyrightText: Copyright (c) 2025, NVIDIA CORPORATION & AFFILIATES. All rights reserved.\n",
-        "# SPDX-License-Identifier: Apache-2.0\n",
+        "# Adding the evaluator to evaluation config (Optional)\n",
         "\n",
+        "Simply append this portion to the bottom of the current eval_config.yaml \n",
+        "\n",
+        "```python\n",
+        "\n",
+        "evaluators:\n",
+        "    # ONLY our custom similarity evaluator - no built-in evaluators\n",
+        "    similarity_evaluator:\n",
+        "      _type: similarity_evaluator\n",
+        "      model_name: all-MiniLM-L6-v2\n",
+        "```\n",
+        "\n",
+        "## Setting up a custom config to only run our custom evaluator (Optional)\n",
+        "\n",
+        "- create the file under ../configs/eval_config_with_similarity.yml\n",
+        "\n",
+        "```python\n",
         "general:\n",
         "  use_uvloop: true\n",
         "  front_end:\n",
@@ -635,23 +616,22 @@
         "    # ONLY our custom similarity evaluator - no built-in evaluators\n",
         "    similarity_evaluator:\n",
         "      _type: similarity_evaluator\n",
-        "      model_name: all-MiniLM-L6-v2"
+        "      model_name: all-MiniLM-L6-v2\n",
+        "```\n",
+        "\n",
+        "\n"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
       "source": [
-        "# Lets test out your custom similarity evaluator\n",
-        "custom_config_path = Path(\"../configs/eval_config_with_similarity.yml\").resolve()\n",
+        "# Lets run the evaluation harness with your new config file!\n",
         "\n",
-        "print(f\"Testing your custom similarity evaluator\")\n",
-        "print(f\"Config: {custom_config_path}\")\n",
-        "print(\"\\\\n\" + \"=\"*60)\n",
-        "\n",
-        "!nat eval --config_file \"{custom_config_path}\"\n"
+        "To do this simply run & the workflow process should start from there!\n",
+        "```python\n",
+        "nat eval --config_file \"{config_path}\"\n",
+        "```"
       ]
     }
   ],
