Added instructions to get to custom evaluators and also fixed local file links in markdown

--- a/notebooks/aira_evaluation_tutorial.ipynb
+++ b/notebooks/aira_evaluation_tutorial.ipynb
@@ -19,9 +19,9 @@
         "\n",
         "Before starting, ensure you have:\n",
         "- Local Deployment of AI-Q Research Assistant or hosted endpoint\n",
-        "    - Reference here for local deployment steps[get-started docker compose setup](https://github.com/NVIDIA-AI-Blueprints/aiq-research-assistant/blob/main/docs/get-started/get-started-docker-compose.md)\n",
+        "    - Reference here for local deployment steps[get-started docker compose setup](../docs/get-started/get-started-docker-compose.md)\n",
         "- Local Deployment of Foundational RAG or hosted endpoint\n",
-        "    - Steps for RAG deployment are also in the same [get-started docker compose setup](https://github.com/NVIDIA-AI-Blueprints/aiq-research-assistant/blob/main/docs/get-started/get-started-docker-compose.md)\n",
+        "    - Steps for RAG deployment are also in the same [get-started docker compose setup](../docs/get-started/get-started-docker-compose.md)\n",
         "- Python 3.12+\n",
         "- NVIDIA API Key (from [build.nvidia.com](https://build.nvidia.com))\n",
         "- (Optional) Tavily API Key for web search capabilities\n",
@@ -409,6 +409,13 @@
         "Dual-template metrics average two independent LLM-as-a-judge ratings after mapping to the 0–1 interval.\n",
         "\n",
         "Where native scales differ (e.g., 0–2 or 0–4), scores are normalized to 0–1 for comparability"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### If you were interested in creating your own custom evaluator the instructions are in the [Evaluate.md](../docs/evaluate.md) under the section title \"Implementing a Custom Evaluator\"\n"
       ]
     },
     {
