Fixed two minor formatting issues

--- a/notebooks/aira_evaluation_tutorial.ipynb
+++ b/notebooks/aira_evaluation_tutorial.ipynb
@@ -19,7 +19,7 @@
         "\n",
         "Before starting, ensure you have:\n",
         "- Local Deployment of AI-Q Research Assistant or hosted endpoint\n",
-        "    - Reference here for local deployment steps[get-started docker compose setup](../docs/get-started/get-started-docker-compose.md)\n",
+        "    - Reference here for local deployment steps [get-started docker compose setup](../docs/get-started/get-started-docker-compose.md)\n",
         "- Local Deployment of Foundational RAG or hosted endpoint\n",
         "    - Steps for RAG deployment are also in the same [get-started docker compose setup](../docs/get-started/get-started-docker-compose.md)\n",
         "- Python 3.12+\n",
@@ -304,8 +304,7 @@
         "### There are two ways to point the evaluation at a dataset:\n",
         "#### Option A (recommended) : override dataset per run via CLI flag.\n",
         "- nat eval will use this dataset path instead of the config value.\n",
-        "- Example:\n",
-        "- nat eval --config_file \"{config_path}\" --dataset \"{dataset_path}\n",
+        "- Example: nat eval --config_file \"{config_path}\" --dataset \"{dataset_path}\n",
         "- The next cell below will dynamically resolve and point to the default dataset already present in the repo (e.g., data/eval_dataset.json), so just run it\n",
         "\n",
         "#### Option B : edit eval_config.yml once to set an absolute dataset path.\n",
