Updated evaluate.md readme and also local development to fit new architecture structure. Also updated notebook based on QA feedback for usability.

--- a/notebooks/aira_evaluation_tutorial.ipynb
+++ b/notebooks/aira_evaluation_tutorial.ipynb
@@ -19,9 +19,9 @@
         "\n",
         "Before starting, ensure you have:\n",
         "- Local Deployment of AI-Q Research Assistant or hosted endpoint\n",
-        "    - Reference here for local deployment steps [get-started docker compose setup](../docs/get-started/get-started-docker-compose.md)\n",
+        "    - Reference for setup lives at: docs/get-started/get-started-docker-compose.md\n",
         "- Local Deployment of Foundational RAG or hosted endpoint\n",
-        "    - Steps for RAG deployment are also in the same [get-started docker compose setup](../docs/get-started/get-started-docker-compose.md)\n",
+        "    - Steps for RAG deployment are also in the same deployment file at: docs/get-started/get-started-docker-compose.md\n",
         "- Python 3.12+\n",
         "- NVIDIA API Key (from [build.nvidia.com](https://build.nvidia.com))\n",
         "- (Optional) Tavily API Key for web search capabilities\n",
@@ -92,16 +92,6 @@
         "    import aiq_aira\n",
         "    print(\"SUCCESS: aiq_aira imported!\")\n",
         "    \n",
-        "    # Test CLI command availability  \n",
-        "    try:\n",
-        "        result_test = subprocess.run([sys.executable, \"-m\", \"aiq_aira.cli\", \"--help\"], \n",
-        "                                   capture_output=True, text=True, timeout=5)\n",
-        "        if \"aiq eval\" in result_test.stdout:\n",
-        "            print(\"SUCCESS: CLI commands available!\")\n",
-        "        else:\n",
-        "            print(\"CLI might need additional setup\")\n",
-        "    except:\n",
-        "        print(\"ℹCLI test skipped\")\n",
         "    \n",
         "    print(f\"\\nREADY TO GO!\")\n",
         "    \n",
@@ -137,7 +127,7 @@
       "outputs": [],
       "source": [
         "# Run this cell to set up the environment variables, you can also set them manually in your terminal\n",
-        "# It will prompt you to enter your API keys for NVIDIA and TAVILY (optional) after you run the cell\n",
+        "# It will prompt you to enter your API key for NVIDIA\n",
         "\n",
         "import os\n",
         "import getpass\n",
@@ -168,10 +158,22 @@
         "\n",
         "key = os.environ.get(\"NVIDIA_API_KEY\", \"\")\n",
         "shown = f\"{key[:6]}...{key[-4:]}\" if len(key) >= 10 else \"***\"\n",
-        "print(f\"NVIDIA_API_KEY (masked): {shown}\")\n",
-        "\n",
-        "\n",
-        "# Optional Tavily; allow skipping by pressing Enter\n",
+        "print(f\"NVIDIA_API_KEY (masked): {shown}\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Optional: Setting up Web Search with Tavily"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "tavily = os.environ.get(\"TAVILY_API_KEY\", \"\").strip()\n",
         "if not tavily:\n",
         "    tmp = getpass.getpass(\"Optional: TAVILY_API_KEY (press Enter to skip): \").strip()\n",
@@ -181,14 +183,14 @@
         "    else:\n",
         "        print(\"TAVILY_API_KEY not set (optional).\")\n",
         "else:\n",
-        "    print(\"TAVILY_API_KEY is set (optional).\")\n"
+        "    print(\"TAVILY_API_KEY is set (optional).\")"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Optional: Setting up Tracing with W&B Weave\n",
+        "### Optional: Setting up Tracing with W&B Weave\n",
         "\n",
         "- To turn tracing with weave go into /configs/eval_config.yml go under telemetry portion\n",
         "  - It is currently set to being off by default but uncommenting the portion below turns on weave tracing during evaluation\n",
@@ -408,6 +410,14 @@
         "Dual-template metrics average two independent LLM-as-a-judge ratings after mapping to the 0–1 interval.\n",
         "\n",
         "Where native scales differ (e.g., 0–2 or 0–4), scores are normalized to 0–1 for comparability"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Example Output Files:\n",
+        "For reference on what to expect from a full end-to-end evaluation, see the [example workflow output files - pointing to citation f1 but all files live in that directory](../docs/example-workflow-output/citation_f1_output.json) which demonstrate the typical structure and content of evaluation results. If on juptyer, reference docs/example-workflow-output/ for the example output."
       ]
     },
     {
