Updated the env variables for the notebook and also for the eval_config

--- a/notebooks/aira_evaluation_tutorial.ipynb
+++ b/notebooks/aira_evaluation_tutorial.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# AI-Q AIRA Evaluation Suite Tutorial\n",
+        "# AI-Q Research Assistant Evaluation Suite Tutorial\n",
         "\n",
         "This notebook provides a comprehensive walkthrough of the AI-Q AIRA Evaluation Suite, demonstrating how to evaluate AI-generated research reports with automatic dataset preprocessing and comprehensive quality metrics.\n",
         "\n",
@@ -22,6 +22,9 @@
         "    - Reference for setup lives at: docs/get-started/get-started-docker-compose.md\n",
         "- Local Deployment of Foundational RAG or hosted endpoint\n",
         "    - Steps for RAG deployment are also in the same deployment file at: docs/get-started/get-started-docker-compose.md\n",
+        "- Default collections loaded, especially “Biomedical_Dataset” (see docs/get-started/get-started-docker-compose.md).\n",
+        "    - This is required because both the evaluation suite and the research workflow read from this RAG collection.\n",
+        "- Alternatively, deploy via Helm: deploy/helm (see docs/get-started/helm-deployment.md)\n",
         "- Python 3.12+\n",
         "- NVIDIA API Key (from [build.nvidia.com](https://build.nvidia.com))\n",
         "- (Optional) Tavily API Key for web search capabilities\n",
@@ -275,17 +278,31 @@
         "\n",
         "import os\n",
         "\n",
+        "# Default: self-hosted/local NIMs\n",
+        "# Hosted Instruct LLM Backend (set to meta/llama-3.3-70b-instruct)\n",
+        "os.environ[\"INSTRUCT_LLM_BASE_URL\"]=\"http://aira-instruct-llm:8000/v1}\"\n",
         "# Hosted Nemotron Backend (for reasoning)\n",
-        "os.environ[\"NEMOTRON_LLM_BASE_URL\"] = \"http://nim-llm-ms:8000/v1\"\n",
+        "os.environ[\"NEMOTRON_LLM_BASE_URL\"]=\"http://nim-llm-ms:8000/v1\"\n",
         "# RAG server for generate_summary / artifact_qa\n",
-        "os.environ[\"RAG_SERVER_URL\"] = \"http://rag-server:8081/v1\"\n",
+        "os.environ[\"RAG_SERVER_URL\"]=\"http://rag-server:8081/v1\"\n",
         "\n",
-        "os.environ[\"EVAL_LLM_BASE_URL\"] = \"http://aira-instruct-llm:8000/v1\"\n",
+        "# Optional: If you want to use hosted endpoints for the evaluation LLM and RAGAS LLM, uncomment the following lines and point to the correct hosted endpoints\n",
+        "# Else, the default for evaluation LLM and RAGAS LLM are to use models hosted on NVIDIA's build.nvidia.com\n",
+        "# os.environ[\"EVAL_LLM_BASE_URL\"]=\"http://local-llm-endpoint:8000/v1\"\n",
+        "# os.environ[\"RAGAS_LLM_BASE_URL\"]=\"http://local-llm-endpoint:8000/v1\"\n",
         "\n",
-        "# NVIDIA hosted models (leave as-is if you still want integrate.api)\n",
-        "# os.environ[\"RAGAS_LLM_BASE_URL\"]    = \"https://integrate.api.nvidia.com/v1\"\n",
         "\n",
-        "print(\"Environment overrides set\")"
+        "# NVIDIA hosted example: uncomment ALL lines below to use hosted endpoints, you must have your own RAG server and set the correct endpoints\n",
+        "# os.environ[\"RAG_SERVER_URL\"]=\"https://your-rag-server.example.com/v1\"\n",
+        "# os.environ[\"INSTRUCT_LLM_BASE_URL\"]=\"https://integrate.api.nvidia.com/v1\"\n",
+        "# os.environ[\"NEMOTRON_LLM_BASE_URL\"]=\"https://integrate.api.nvidia.com/v1\"\n",
+        "# os.environ[\"EVAL_LLM_BASE_URL\"]=\"https://integrate.api.nvidia.com/v1\"\n",
+        "# os.environ[\"RAGAS_LLM_BASE_URL\"]=\"https://integrate.api.nvidia.com/v1\"\n",
+        "\n",
+        "print(\"Environment overrides set\")\n",
+        "key = os.environ.get(\"NVIDIA_API_KEY\", \"\")\n",
+        "shown = f\"{key[:6]}...{key[-4:]}\" if len(key) >= 10 else \"***\"\n",
+        "print(f\"You have set your NVIDIA_API_KEY (masked): {shown}\")"
       ]
     },
     {
