Updated notebook to use local host instead of container names for ease of use, since juptyer might not be able to use the docker DNS.

--- a/notebooks/aira_evaluation_tutorial.ipynb
+++ b/notebooks/aira_evaluation_tutorial.ipynb
@@ -280,11 +280,11 @@
         "\n",
         "# Default: self-hosted/local NIMs\n",
         "# Hosted Instruct LLM Backend (set to meta/llama-3.3-70b-instruct)\n",
-        "os.environ[\"INSTRUCT_LLM_BASE_URL\"]=\"http://aira-instruct-llm:8000/v1}\"\n",
+        "os.environ[\"INSTRUCT_LLM_BASE_URL\"]=\"http://localhost:8050/v1}\"\n",
         "# Hosted Nemotron Backend (for reasoning)\n",
-        "os.environ[\"NEMOTRON_LLM_BASE_URL\"]=\"http://nim-llm-ms:8000/v1\"\n",
+        "os.environ[\"NEMOTRON_LLM_BASE_URL\"]=\"http://localhost:8000/v1\"\n",
         "# RAG server for generate_summary / artifact_qa\n",
-        "os.environ[\"RAG_SERVER_URL\"]=\"http://rag-server:8081/v1\"\n",
+        "os.environ[\"RAG_SERVER_URL\"]=\"http://localhost:8081/v1\"\n",
         "\n",
         "# Optional: If you want to use hosted endpoints for the evaluation LLM and RAGAS LLM, uncomment the following lines and point to the correct hosted endpoints\n",
         "# Else, the default for evaluation LLM and RAGAS LLM are to use models hosted on NVIDIA's build.nvidia.com\n",
