Added documentation on how to set tavily (web search) to be true in notebook and evaluate.md

--- a/notebooks/aira_evaluation_tutorial.ipynb
+++ b/notebooks/aira_evaluation_tutorial.ipynb
@@ -177,6 +177,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# To set up web search with tavily, you need to get an API key from tavily and set it in the environment variable TAVILY_API_KEY by running this cell\n",
+        "# To enable web search during evaluation, please set `\"search_web\": true` in your dataset entries. See example in data/eval_dataset.json\n",
         "tavily = os.environ.get(\"TAVILY_API_KEY\", \"\").strip()\n",
         "if not tavily:\n",
         "    tmp = getpass.getpass(\"Optional: TAVILY_API_KEY (press Enter to skip): \").strip()\n",
