Removed extra char from notebook

--- a/notebooks/aira_evaluation_tutorial.ipynb
+++ b/notebooks/aira_evaluation_tutorial.ipynb
@@ -320,7 +320,7 @@
         "\n",
         "# Default: self-hosted/local NIMs\n",
         "# Hosted Instruct LLM Backend (set to meta/llama-3.3-70b-instruct)\n",
-        "os.environ[\"INSTRUCT_LLM_BASE_URL\"]=\"http://localhost:8050/v1}\"\n",
+        "os.environ[\"INSTRUCT_LLM_BASE_URL\"]=\"http://localhost:8050/v1\"\n",
         "# Hosted Nemotron Backend (for reasoning)\n",
         "os.environ[\"NEMOTRON_LLM_BASE_URL\"]=\"http://localhost:8999/v1\"\n",
         "# RAG server for generate_summary / artifact_qa\n",
