Updated troubleshooting docs, also removed the venv setup in notebook due to complexity

--- a/notebooks/aira_evaluation_tutorial.ipynb
+++ b/notebooks/aira_evaluation_tutorial.ipynb
@@ -37,44 +37,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Environment setup: create and use a dedicated virtual env + kernel\n",
-        "import os, sys, subprocess, venv, shutil, json, pathlib\n",
-        "\n",
-        "project_root = pathlib.Path.cwd().parent if (pathlib.Path.cwd().name == \"notebooks\") else pathlib.Path.cwd()\n",
-        "venv_dir = project_root / \".venv_aira\"\n",
-        "kernel_name = \"aira-venv\"\n",
-        "\n",
-        "# 1) Create venv if missing\n",
-        "if not venv_dir.exists():\n",
-        "    print(f\"Creating virtual environment at: {venv_dir}\")\n",
-        "    venv.EnvBuilder(with_pip=True, clear=False).create(venv_dir)\n",
-        "else:\n",
-        "    print(f\"Virtual environment already exists: {venv_dir}\")\n",
-        "\n",
-        "# 2) Resolve paths to the venv’s python and pip\n",
-        "python_bin = venv_dir / (\"bin/python\" if os.name != \"nt\" else \"Scripts/python.exe\")\n",
-        "pip_cmd = [str(python_bin), \"-m\", \"pip\"]\n",
-        "\n",
-        "# 3) Upgrade pip/setuptools/wheel for clean installs\n",
-        "subprocess.check_call(pip_cmd + [\"install\", \"--upgrade\", \"pip\", \"setuptools\", \"wheel\"])\n",
-        "\n",
-        "# 4) Install core deps and register a Jupyter kernel bound to this venv\n",
-        "subprocess.check_call(pip_cmd + [\"install\", \"ipykernel\", \"PyYAML\"])\n",
-        "\n",
-        "# 5) Register kernel so the notebook can switch to it\n",
-        "subprocess.check_call([str(python_bin), \"-m\", \"ipykernel\", \"install\", \"--user\", \"--name\", kernel_name, \"--display-name\", \"Python (aira-venv)\"])\n",
-        "\n",
-        "print(\"\\nKernel installed: Python (aira-venv).\")\n",
-        "print(\"Next step: In the Jupyter Kernel menu, select: Python (aira-venv).\")\n",
-        "print(f\"Venv python: {python_bin}\")\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
         "import os\n",
         "import sys\n",
         "import subprocess\n",
@@ -320,7 +282,7 @@
         "\n",
         "# Default: self-hosted/local NIMs\n",
         "# Hosted Instruct LLM Backend (set to meta/llama-3.3-70b-instruct)\n",
-        "os.environ[\"INSTRUCT_LLM_BASE_URL\"]=\"http://localhost:8050/v1\"\n",
+        "os.environ[\"INSTRUCT_LLM_BASE_URL\"]=\"http://localhost:8050/v1}\"\n",
         "# Hosted Nemotron Backend (for reasoning)\n",
         "os.environ[\"NEMOTRON_LLM_BASE_URL\"]=\"http://localhost:8999/v1\"\n",
         "# RAG server for generate_summary / artifact_qa\n",
