--- a/notebooks/get_started_nvidia_api.ipynb
+++ b/notebooks/get_started_nvidia_api.ipynb
@@ -56,12 +56,26 @@
    "id": "47e70bde-5052-4f32-881a-6d634e2d3091",
    "metadata": {},
    "source": [
-    "See the NVIDIA RAG blueprint documentation for full details. This notebook will use docker compose to deploy the RAG blueprint with *hosted NVIDIA NIM microservices*. Start by setting the appropriate environment variables."
+    "See the NVIDIA RAG blueprint documentation for full details. This notebook will use docker compose to deploy the RAG blueprint with *hosted NVIDIA NIM microservices*. Start by setting the appropriate environment variables.\n",
+    "\n",
+    "## Security Note: API Key Management\n",
+    "\n",
+    "This notebook uses secure methods to handle API keys:\n",
+    "\n",
+    "1. **Environment Variables (Recommended)**: Set your API keys as environment variables before running the notebook:\n",
+    "   ```bash\n",
+    "   export NVIDIA_API_KEY=\"your-nvidia-api-key\"\n",
+    "   export TAVILY_API_KEY=\"your-tavily-api-key\"  # Optional for web search\n",
+    "   ```\n",
+    "\n",
+    "2. **Interactive Input**: If environment variables are not set, the notebook will prompt you to enter API keys securely using hidden input (the keys won't be visible on screen).\n",
+    "\n",
+    "3. **No Hardcoded Keys**: API keys are never stored in the notebook cells, eliminating security risks when sharing or committing the notebook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "1fbb8e53-b8e5-4c91-8080-11507edf6a81",
    "metadata": {},
    "outputs": [],
@@ -69,8 +83,22 @@
     "#To pull images required by the blueprint from NGC, you must first authenticate Docker with nvcr.io.\n",
     "import subprocess\n",
     "import os\n",
+    "import getpass\n",
     "\n",
-    "NVIDIA_API_KEY = \"nvapi-your-api-key\"\n",
+    "# Check if NVIDIA_API_KEY is already set in environment\n",
+    "NVIDIA_API_KEY = os.environ.get('NVIDIA_API_KEY')\n",
+    "\n",
+    "if not NVIDIA_API_KEY:\n",
+    "    print(\"NVIDIA API Key not found in environment variables.\")\n",
+    "    print(\"Please enter your NVIDIA API Key (input will be hidden for security):\")\n",
+    "    NVIDIA_API_KEY = getpass.getpass(\"NVIDIA API Key: \")\n",
+    "    \n",
+    "    if not NVIDIA_API_KEY or NVIDIA_API_KEY.strip() == \"\":\n",
+    "        raise ValueError(\"NVIDIA API Key is required to proceed\")\n",
+    "else:\n",
+    "    print(\"Using NVIDIA API Key from environment variables\")\n",
+    "\n",
+    "# Set environment variables\n",
     "os.environ['NVIDIA_API_KEY'] = NVIDIA_API_KEY\n",
     "os.environ['NGC_API_KEY'] = NVIDIA_API_KEY\n",
     "\n",
@@ -113,21 +141,27 @@
    "outputs": [],
    "source": [
     "#Set the endpoint urls of the NIMs\n",
-    "os.environ[\"APP_LLM_MODELNAME\"] = \"nvidia/llama-3.3-nemotron-super-49b-v1.5\"\n",
     "os.environ[\"APP_EMBEDDINGS_MODELNAME\"] = \"nvidia/llama-3.2-nv-embedqa-1b-v2\"\n",
     "os.environ[\"APP_RANKING_MODELNAME\"] = \"nvidia/llama-3.2-nv-rerankqa-1b-v2\"\n",
     "os.environ[\"APP_EMBEDDINGS_SERVERURL\"] = \"\"\n",
     "os.environ[\"APP_LLM_SERVERURL\"] = \"\"\n",
+    "os.environ[\"APP_LLM_MODELNAME\"] = \"nvidia/llama-3.3-nemotron-super-49b-v1.5\"\n",
+    "os.environ[\"APP_FILTEREXPRESSIONGENERATOR_MODELNAME\"] = \"nvidia/llama-3.3-nemotron-super-49b-v1.5\"\n",
+    "os.environ[\"APP_FILTEREXPRESSIONGENERATOR_SERVERURL\"] = \"\"\n",
+    "os.environ[\"SUMMARY_LLM\"] = \"nvidia/llama-3.3-nemotron-super-49b-v1.5\"\n",
     "os.environ[\"APP_RANKING_SERVERURL\"] = \"\"\n",
-    "os.environ[\"EMBEDDING_NIM_ENDPOINT\"] = \"https://integrate.api.nvidia.com/v1\"\n",
-    "os.environ[\"PADDLE_HTTP_ENDPOINT\"] = \"https://ai.api.nvidia.com/v1/cv/baidu/paddleocr\"\n",
-    "os.environ[\"PADDLE_INFER_PROTOCOL\"] = \"http\"\n",
+    "os.environ[\"SUMMARY_LLM_SERVERURL\"] = \"\"\n",
+    "os.environ[\"OCR_HTTP_ENDPOINT\"] = \"https://ai.api.nvidia.com/v1/cv/baidu/paddleocr\"\n",
+    "os.environ[\"YOLOX_INFER_PROTOCOL\"] = \"http\"\n",
+    "os.environ[\"OCR_MODEL_NAME\"] = \"paddle\"\n",
     "os.environ[\"YOLOX_HTTP_ENDPOINT\"] = \"https://ai.api.nvidia.com/v1/cv/nvidia/nemoretriever-page-elements-v2\"\n",
     "os.environ[\"YOLOX_INFER_PROTOCOL\"] = \"http\"\n",
     "os.environ[\"YOLOX_GRAPHIC_ELEMENTS_HTTP_ENDPOINT\"] = \"https://ai.api.nvidia.com/v1/cv/nvidia/nemoretriever-graphic-elements-v1\"\n",
     "os.environ[\"YOLOX_GRAPHIC_ELEMENTS_INFER_PROTOCOL\"] = \"http\"\n",
     "os.environ[\"YOLOX_TABLE_STRUCTURE_HTTP_ENDPOINT\"] = \"https://ai.api.nvidia.com/v1/cv/nvidia/nemoretriever-table-structure-v1\"\n",
     "os.environ[\"YOLOX_TABLE_STRUCTURE_INFER_PROTOCOL\"] = \"http\"\n",
+    "os.environ[\"APP_QUERYREWRITER_SERVERURL\"] = \"\"\n",
+    "os.environ[\"APP_QUERYREWRITER_MODELNAME\"] = \"nvidia/llama-3.3-nemotron-super-49b-v1.5\"\n",
     "\n",
     "#Disable re-ranking\n",
     "os.environ[\"ENABLE_RERANKER\"] = \"false\""
@@ -310,8 +344,29 @@
    "source": [
     "os.environ[\"AIRA_HOSTED_NIMS\"] = \"true\"\n",
     "\n",
-    "# optional, if you want to use web search\n",
-    "os.environ[\"TAVILY_API_KEY\"] = \"tavily-api-key\""
+    "# Optional: Set up Tavily API key for web search functionality\n",
+    "TAVILY_API_KEY = os.environ.get('TAVILY_API_KEY')\n",
+    "\n",
+    "if not TAVILY_API_KEY:\n",
+    "    print(\"\\nTavily API Key not found in environment variables.\")\n",
+    "    print(\"Tavily enables web search functionality (optional).\")\n",
+    "    \n",
+    "    use_tavily = input(\"Do you want to enable web search with Tavily? (y/n): \").lower().strip()\n",
+    "    \n",
+    "    if use_tavily in ['y', 'yes']:\n",
+    "        print(\"Please enter your Tavily API Key (input will be hidden for security):\")\n",
+    "        TAVILY_API_KEY = getpass.getpass(\"Tavily API Key: \")\n",
+    "        \n",
+    "        if TAVILY_API_KEY and TAVILY_API_KEY.strip():\n",
+    "            os.environ[\"TAVILY_API_KEY\"] = TAVILY_API_KEY\n",
+    "            print(\"Tavily API key set successfully\")\n",
+    "        else:\n",
+    "            print(\"No Tavily API key provided - web search will be disabled\")\n",
+    "    else:\n",
+    "        print(\"Web search functionality will be disabled\")\n",
+    "else:\n",
+    "    print(\"Using Tavily API Key from environment variables\")\n",
+    "    os.environ[\"TAVILY_API_KEY\"] = TAVILY_API_KEY"
    ]
   },
   {
@@ -462,7 +517,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -476,7 +531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
