Update references to rag playground

--- a/notebooks/get_started_nvidia_api.ipynb
+++ b/notebooks/get_started_nvidia_api.ipynb
@@ -251,7 +251,7 @@
     "| 355f3317a73a | milvus-standalone | Up 2 hours |\n",
     "| b6620d59d4d3 | milvus-minio | Up 2 hours (healthy) |\n",
     "| 0c266aaa1fb1 | milvus-etcd | Up 2 hours (healthy) |\n",
-    "| af09adfad86b | rag-playground | Up 2 hours |\n",
+    "| af09adfad86b | rag-frontend | Up 2 hours |\n",
     "| d4b7399ab07e | compose-redis-1 | Up 2 hours |"
    ]
   },
@@ -269,7 +269,7 @@
    "metadata": {},
    "source": [
     "<div class=\\\"alert alert-block alert-success\\\">\n",
-    "    <b>Tip:</b> If you are running this notebook on brev, you will need to make the port for the RAG playground accessible. On the settings page for your machine, navigate to \"Using Ports\", enter \"8090\", click \"Expose Port\", and then click \"I accept\". "
+    "    <b>Tip:</b> If you are running this notebook on brev, you will need to make the port for the RAG frontend accessible. On the settings page for your machine, navigate to \"Using Ports\", enter \"8090\", click \"Expose Port\", and then click \"I accept\". "
    ]
   },
   {
