--- a/notebooks/aiq_evaluation_tutorial.ipynb
+++ b/notebooks/aiq_evaluation_tutorial.ipynb
@@ -6,11 +6,11 @@
       "source": [
         "# AI-Q Research Assistant Evaluation Suite Tutorial\n",
         "\n",
-        "This notebook provides a comprehensive walkthrough of the AI-Q Deep Researcher Evaluation Suite, demonstrating how to evaluate AI-generated research reports with automatic dataset preprocessing and comprehensive quality metrics.\n",
+        "This notebook provides a comprehensive walkthrough of the AI-Q Research Assistant Evaluation Suite, demonstrating how to evaluate AI-generated research reports with automatic dataset preprocessing and comprehensive quality metrics.\n",
         "\n",
         "## What You'll Learn\n",
         "\n",
-        "- How to set up the AI-Q Deep Researcher evaluation framework\n",
+        "- How to set up the AI-Q Research Assistant evaluation framework\n",
         "- Creating and preprocessing evaluation datasets  \n",
         "- Configuring and running evaluations\n",
         "- Understanding evaluation metrics and results\n",
@@ -63,7 +63,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Step 1: Install AI-Q Deep Researcher package directly into the current Python environment\n",
+        "# Step 1: Install AI-Q Research Assistant package directly into the current Python environment\n",
         "print(\"Installing directly into current Python environment...\")\n",
         "print(f\"Using Python: {sys.executable}\")\n",
         "\n",
