Add missing OCR_INFER_PROTOCOL env var to notebook

--- a/notebooks/get_started_nvidia_api.ipynb
+++ b/notebooks/get_started_nvidia_api.ipynb
@@ -152,7 +152,7 @@
     "os.environ[\"APP_RANKING_SERVERURL\"] = \"\"\n",
     "os.environ[\"SUMMARY_LLM_SERVERURL\"] = \"\"\n",
     "os.environ[\"OCR_HTTP_ENDPOINT\"] = \"https://ai.api.nvidia.com/v1/cv/baidu/paddleocr\"\n",
-    "os.environ[\"YOLOX_INFER_PROTOCOL\"] = \"http\"\n",
+    "os.environ[\"OCR_INFER_PROTOCOL\"] = \"http\"\n",
     "os.environ[\"OCR_MODEL_NAME\"] = \"paddle\"\n",
     "os.environ[\"YOLOX_HTTP_ENDPOINT\"] = \"https://ai.api.nvidia.com/v1/cv/nvidia/nemoretriever-page-elements-v2\"\n",
     "os.environ[\"YOLOX_INFER_PROTOCOL\"] = \"http\"\n",
